Fix headline spacing on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -60,7 +60,7 @@ p {
 .dbm-section-header {
   font: 400 2rem/1 "Vollkorn SC", san-serif;
   letter-spacing: -0.025em;
-  padding: 1rem 0;
+  padding: 1.5rem 0;
   text-align: center;
 
   @media (min-width: 640px) {
